--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@askloullc/leadform-embed",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "type": "module",
-  "main": "dist/leadform.iife.min.js",
-  "module": "dist/leadform.esm.js",
+  "main": "dist/index.iife.min.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/leadform.esm.js",
-      "require": "./dist/leadform.iife.min.js"
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.iife.min.js"
     },
     "./react": {
       "types": "./dist/react.d.ts",
